# dphysio

./: .env.example  .gitignore  GUIDELINES.md  firebase.json  firestore.indexes.json  firestore.rules  index.html  package-lock.json  package.json  storage.rules  tailwind.config.ts  vite.config.ts
.github/workflows/: tauri-release.yml
electron/: main.cjs
functions/: .env.example  package-lock.json  package.json
functions/src/: index.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/frontend-stub/: index.html
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/constants/: calendar.ts  index.ts
src/contexts/: AuthContext.tsx  VoiceContext.tsx
src/hooks/: useActivityLogger.ts  useAnalytics.ts  useAuth.tsx  useBriefingData.ts  useBriefingLogic.ts  useCalendarDrag.ts  useCalendarNavigation.ts  useCalendarState.ts  useDashboardData.ts  useEventForm.ts  useEventReadStatus.ts  useEventUnreadStatus.ts  useEvents.ts  useFileResources.ts  useMeetingItems.ts  useMessageReadStatus.ts  useNotifications.ts  useProfiles.ts  useResources.ts  useScheduleParticipants.ts  useSessionTracker.ts  useSmartDictionary.ts  useThreadMessages.ts  useTodos.ts  useVoiceAssistant.ts
src/lib/: colors.ts  firebase.ts
src/pages/: AnnouncementsPage.tsx  AuthPage.tsx  CalendarPage.tsx  Dashboard.tsx  DepartmentCalendarPage.tsx  MeetingsPage.tsx  MembersPage.tsx  ProfessorCalendarPage.tsx  ProfileSetupPage.tsx  ResourcesPage.tsx  SettingsPage.tsx  StatisticsPage.tsx  TodosPage.tsx
src/types/: api.ts  (+3 more)
(+76 files in other folders)
